style: change style for colors

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,10 +1,11 @@
-@import '../../App.scss';
+@import "../../App.scss";
 
 .footer {
-    background-color: $secondaryBg !important;
-    color: $secondaryColor !important;
-    .icon{
-        color: #C84E4E; 
-        margin: 0 5px 
-    }
+  background-color: $secondaryBg;
+  color: $secondaryColor;
+  z-index: 1000;
+  .icon {
+    color: #c84e4e;
+    margin: 0 5px;
+  }
 }
