--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 @import-normalize;
 @import "~antd/dist/antd.css";
-$secondaryColor: #9F9F9F;
-$secondaryBg: #27273B;
+$secondaryColor: #9f9f9f !important;
+$secondaryBg: #27273b !important;
 
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
