refactor: move Sider to another component

--- a/src/components/Layout/AppLayout.module.scss
+++ b/src/components/Layout/AppLayout.module.scss
@@ -1,30 +1,7 @@
-@import "../../App.scss";
+@import "../../variables.scss";
 
 $contentBg: #1d1b2a;
 
 .content {
-  background: #1d1b2a;
-}
-
-.sider {
-  background-color: $secondaryBg;
-  color: $secondaryColor;
-}
-
-.menu {
-  background: inherit !important;
-  padding-top: 40px !important;
-  li {
-    margin-bottom: 40px !important;
-  }
-}
-
-.link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.icon {
-  font-size: 40px;
+  background: $contentBg;
 }
