feat: change centered content style

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,6 @@
 @import-normalize;
 @import "~antd/dist/antd.css";
-$secondaryColor: #9f9f9f !important;
-$secondaryBg: #27273b !important;
+@import "./variables.scss";
 
 body {
   overflow-x: hidden;
