--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,9 @@
 @import-normalize;
 @import "~antd/dist/antd.css";
 @import "./variables.scss";
+@import url("https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:wght@400;900&display=swap");
 
 body {
   overflow-x: hidden;
+  font-family: "Cousine", monospace !important;
 }
