--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,9 +2,8 @@
 
 .header {
   background-color: $secondaryBg;
-  color: $secondaryColor;
   .title {
     font-size: 32px;
-    color: $secondaryColor;
+    color: $primaryColor;
   }
 }
