feat: add login functionallity with matamask
Added the error and spinner components when the user make login.
The user address is added when the user logged successfully.
Private and public routing was added to the app.
Auth reducer also was added using redux.

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,4 +6,9 @@
     font-size: 32px;
     color: $primaryColor;
   }
+  .address {
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+  }
 }
