--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -17,6 +17,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  .userPlus {
+    font-size: 40px;
+    padding-left: 15px;
+  }
 }
 
 .icon {
