--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,15 +1,14 @@
-@import "../../variables.scss";
+@import "../../styles/variables.scss";
 
 .sider {
   background-color: $secondaryBg;
   color: $secondaryColor;
-}
-
-.menu {
-  background: inherit !important;
-  padding-top: 40px !important;
-  li {
-    margin-bottom: 40px !important;
+  &-menu {
+    background: inherit !important;
+    padding-top: 40px !important;
+    li {
+      margin-bottom: 40px !important;
+    }
   }
 }
 
@@ -17,7 +16,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  .userPlus {
+  .user-plus {
     font-size: 40px;
     padding-left: 15px;
   }
