--- a/src/components/Coins/Coins.module.scss
+++ b/src/components/Coins/Coins.module.scss
@@ -1,20 +1,26 @@
 @import "../../styles/variables.scss";
-.currency-container {
+
+.coins {
   &-title {
     text-align: center;
     color: $secondaryColor;
   }
 }
 
-// CURRENCY LIST
-.currency-list {
+// COIN LIST
+.coin-list {
   width: 100%;
   height: 346px;
   overflow-y: scroll;
+  &-title {
+    text-transform: uppercase;
+    font-weight: 800;
+  }
 }
 
-// CURRENCY ITEM
-.currency-item {
+// COIN ITEM
+.coin-item,
+.coin-list-title {
   width: 100%;
   color: $primaryColor;
   border-bottom: 2px solid $primaryColor;
