--- a/src/components/Spinner/Spinner.module.scss
+++ b/src/components/Spinner/Spinner.module.scss
@@ -1,12 +1,13 @@
 .row {
   height: 100%;
+  width: 100%;
   .col {
     text-align: center;
     .spinner {
       font-size: 4rem;
       color: #fff;
     }
-    .undertitle {
+    .under-title {
       padding-top: 40px;
       font-size: 2rem;
       color: #fff !important;
