feat: add skeleton to loding data

--- a/src/components/CoinList/CoinList.module.scss
+++ b/src/components/CoinList/CoinList.module.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 346px;
   overflow-y: scroll;
+  overflow-x: hidden;
   &-title {
     text-transform: uppercase;
     font-weight: 800;
