--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -11,10 +11,15 @@
       padding: 0 5px;
     }
     &:first-child {
-      height: 40%;
+      height: 25%;
+      @media screen and (min-width: 1024px) {
+        height: 40%;
+      }
     }
     &:nth-child(2) {
-      height: 60%;
+      @media screen and (min-width: 1024px) {
+        height: 60%;
+      }
     }
     padding: 10px 52px;
     .col {
