--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -16,7 +16,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  .user-plus {
+  .admin {
     font-size: 40px;
     padding-left: 15px;
   }
