--- a/src/components/Coins/Coins.module.scss
+++ b/src/components/Coins/Coins.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
 .coins {
-  &-title {
+  &Title {
     text-align: center;
     color: $secondaryColor;
   }
