--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -3,7 +3,7 @@
 .sider {
   background-color: $secondaryBg;
   color: $secondaryColor;
-  &-menu {
+  &Menu {
     background: inherit !important;
     padding-top: 40px !important;
     li {
