--- a/src/components/CoinList/CoinList.module.scss
+++ b/src/components/CoinList/CoinList.module.scss
@@ -1,21 +1,17 @@
 @import "../../styles/variables.scss";
-.coin-list {
+.coinList {
   width: 100%;
-  height: 346px;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  &-title {
+  &Title {
     text-transform: uppercase;
     font-weight: 800;
     width: 100%;
     color: $primaryColor;
-    // border-bottom: 2px solid $primaryColor;
     padding: 10px 20px;
     margin-bottom: 5px;
   }
 }
 
-.not-found {
+.coinsNotFound {
   display: flex;
   align-items: center;
   justify-content: center;
