--- a/src/components/Fee/Fee.module.scss
+++ b/src/components/Fee/Fee.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
 .fee {
-  &-title {
+  &Title {
     text-align: center;
     color: $secondaryColor;
   }
