--- a/src/components/Spinner/Spinner.module.scss
+++ b/src/components/Spinner/Spinner.module.scss
@@ -7,7 +7,7 @@
       font-size: 4rem;
       color: #fff;
     }
-    .under-title {
+    .underTitle {
       padding-top: 40px;
       font-size: 2rem;
       color: #fff !important;
