--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -10,14 +10,17 @@
       padding: 0 5px;
     }
     &:first-child {
-      height: 25%;
+      // height: 25%;
       @media screen and (min-width: 1024px) {
-        height: 40%;
+        // height: 40%;
+        height: 400px;
       }
     }
     &:nth-child(2) {
       @media screen and (min-width: 1024px) {
-        height: 60%;
+        // height: 60%;
+        // height: 800px;
+        min-height: 720px;
       }
     }
     padding: 10px 52px;
