--- a/src/components/AppLayout/AppLayout.module.scss
+++ b/src/components/AppLayout/AppLayout.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables.scss";
+@import "../../styles/abstract/variables";
 
 .layout {
   background: $primaryBg;
@@ -7,5 +7,6 @@
 .content {
   max-width: 1300px;
   margin: 0 auto;
-  min-height: calc(100vh - 134px);
+  padding: 0 20px;
+  min-height: calc(100vh - 134px) !important;
 }
