--- a/src/pages/AdminPage/AdminPage.module.scss
+++ b/src/pages/AdminPage/AdminPage.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables.scss";
+@import "../../styles/abstract/variables";
 .admin {
   height: 100%;
   color: $primaryColor;
