--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables.scss";
+@import "../../styles/abstract/variables";
 
 .dashboard {
   height: 100%;
@@ -45,5 +45,29 @@
         padding: 0 40px;
       }
     }
+  }
+}
+
+// Cryptocurrencies
+.dashboardHeadingContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+}
+
+.headingTitle,
+.showMore {
+  color: $primaryColor;
+  margin: 0 !important;
+  @media screen and (max-width: 576px) {
+    font-size: 16px !important;
+  }
+}
+
+.showMore {
+  a {
+    display: inline-block;
+    padding-left: 20px;
   }
 }
